<?xml version="1.0"?>
<package>
  <name>human_control_arm</name>
  <version>0.0.0</version>
  <description>The human_control_arm package</description>

  <maintainer email="shengwangandy@foxmail.com">shengwang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publihser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publihser</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_generation</run_depend>

  <export>

  </export>
</package>
